# vigilus

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  package-lock.json  start.sh  uninstall.sh
backend/: alembic.ini  pyproject.toml
backend/tests/: conftest.py  test_auth_api.py  test_auth_core.py  test_auth_token.py  test_channels_api.py  test_channels_chunking.py  test_channels_router.py  test_channels_telegram.py  test_chat.py  test_cli_update.py  test_commands.py  test_compressor.py  test_confinement.py  test_crypto.py  test_delegation.py  test_jit.py  test_jit_chat_flow.py  test_jit_scope.py  test_mcp.py  test_mcp_github_url.py  test_mcp_import.py  test_mcp_install.py  test_mcp_robustness.py  test_migration_check.py  test_operators.py  test_orchestrator_empty.py  test_orchestrator_research.py  test_prompt_builder.py  test_providers.py  test_providers_robustness.py  test_running_tasks.py  test_schedules.py  test_scope_topology.py  test_search_backend.py  test_search_tools.py  test_spa_fallback.py  test_sse.py  test_tools.py  test_updates.py  test_web_fetch_ssrf.py
backend/vigilus/: __init__.py  cli.py  config.py  main.py
backend/vigilus/api/: __init__.py  actions.py  auth.py  channels.py  chat.py  commands.py  credentials.py  deps.py  jit.py  mcp.py  memories.py  operators.py  orchestrator.py  providers.py  running_tasks.py  schedules.py  scope.py  search.py  servers.py  sse.py  system.py  tools.py
backend/vigilus/core/: __init__.py  audit.py  auth.py  command.py  commands.py  compressor.py  crypto.py  delegation.py  events.py  memory.py  operator_runtime.py  orchestrator.py  preflight.py  prompt_builder.py  rbac.py  research.py  scheduler.py  scope.py  tasks.py  turn.py  updates.py
backend/vigilus/db/: __init__.py  base.py  models.py  seed.py
backend/vigilus/db/migrations/: env.py
backend/vigilus/db/migrations/versions/: 2026_06_11_2100-af98e9057b01_add_github_fields_to_mcpserver.py  2026_06_11_2200-b7c2f1038a02_add_ssh_auth_method_to_credential.py  2026_06_11_2210-c3a1e2049b03_add_operator_id_to_session.py  2026_06_11_2230-d4b2f3058c04_add_is_default_to_provider.py  (+9 more)
backend/vigilus/integrations/: __init__.py  base.py  chunking.py  discord.py  gateway.py  router.py  telegram.py
backend/vigilus/mcp_host/: __init__.py  manager.py
backend/vigilus/providers/: __init__.py  anthropic_provider.py  base.py  catalog.py  google_provider.py  openai_compat.py  openai_provider.py  registry.py
backend/vigilus/schemas/: __init__.py  action.py  auth.py  channel.py  chat.py  command.py  jit.py  mcp.py  memory.py  operator.py  provider.py  scope.py  search.py  server.py  tool.py
backend/vigilus/search/: __init__.py  base.py  builtin_fetch.py  firecrawl.py  registry.py  searxng.py
backend/vigilus/tools/: __init__.py  registry.py
backend/vigilus/tools/native/: __init__.py  docker.py  host.py  memory.py  scope.py  search.py  ssh.py  wazuh.py
backend/vigilus/tui/: __init__.py  app.py  client.py  config.py
docker/: Dockerfile  (+1 more)
(+53 files in other folders)
