[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigilus"
version = "0.1.0"
description = "Vigilus – AI-powered infrastructure management platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "paramiko>=3.4",
    "docker>=7.0",
    "cryptography>=42.0",
    "anthropic>=0.25",
    "openai>=1.12",
    "google-genai>=2.0",
    "pyjwt>=2.8",
    "structlog>=24.1",
    "mcp>=1.0",
    "apscheduler>=3.10,<4",
    "argon2-cffi>=23.1",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
tui = [
    "textual>=0.80",
]
channels = [
    "discord.py>=2.4",
]
dev = [
    "ruff>=0.3",
    "black>=24.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
vigilus = "vigilus.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
